Undo Refaster test package split, glue it together